--- a/index.html
+++ b/index.html
@@ -897,7 +897,9 @@
 					</div>
 
 
-					<div class="description">
+					<div class="line"></div>
+					
+					<div class="row description">
 					    <p>WordPress Hosting Explained The creation of WordPress began in 2003 as an offshoot of a popular blogging application known as b2. WordPress was further developed as a blogging platform, and it soon overtook its predecessor. More recently, WordPress has expanded into a full-featured web content system for websites of all types, offering dynamic WordPress hosting options to the masses.</p>
 
 						<p>&nbsp;</p>
