--- a/index.html
+++ b/index.html
@@ -898,12 +898,13 @@
 
 
 					<div class="line"></div>
-					
+
 					<div class="row description">
+
+						<h3>How to Choose the Best Web Hosting Provider</h3>
 					    <p>WordPress Hosting Explained The creation of WordPress began in 2003 as an offshoot of a popular blogging application known as b2. WordPress was further developed as a blogging platform, and it soon overtook its predecessor. More recently, WordPress has expanded into a full-featured web content system for websites of all types, offering dynamic WordPress hosting options to the masses.</p>
 
-						<p>&nbsp;</p>
-
+					    <h3>Technical Specifications for Your Website Hosting</h3>
 						<p>Today, over 68 million websites run on WordPress, and users cite several reasons for the award-winning platform's popularity. WordPress hosting software is free and open-source, which allows a multitude of developers to contribute unique themes, widgets and plug-in modules to customize websites and provide powerful yet easy-to-use administrative tools. Understanding the Best WordPress Hosting Options Understanding WordPress hosting first requires some general knowledge about web hosting. All of the websites on the Internet are operated from specialized computers known as servers. Although it is possible to own and operate a server, the cost, training and time commitment required make it prohibitive and inefficient for most individuals and many businesses. To mitigate these costs, companies known as web hosts operate dozens, hundreds or even thousands of servers from a central location. The web hosts then lease their servers and server resources to individuals and businesses at affordable rates. WordPress hosting is very similar to Web hosting. The only difference is that the servers all meet the minimum hardware and software requirements to run the WordPress hosting platform. This allows the platform to integrate seamlessly into the server and process data requests through the Internet quickly and efficiently. Because the demand for WordPress hosting is so high, nearly every reputable web host offers WordPress hosting, and several options are available for a range of requirements and budgets. Someone who just wants to put a personal blog online may choose to go with a shared WordPress hosting plan while large businesses often opt to lease one or more entire servers.</p>
 					</div>
 
